# focus-flow

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/focusflow/: FocusFlowApp.kt
android/app/src/main/java/com/focusflow/data/local/: FocusFlowDatabase.kt
android/app/src/main/java/com/focusflow/data/local/dao/: TaskDao.kt  WidgetStateDao.kt
android/app/src/main/java/com/focusflow/data/local/entity/: TaskEntity.kt  WidgetStateEntity.kt
android/app/src/main/java/com/focusflow/data/remote/: ApiClient.kt  ApiModels.kt  FocusFlowApi.kt
android/app/src/main/java/com/focusflow/data/sync/: SyncWorker.kt
android/app/src/main/java/com/focusflow/domain/models/: Task.kt  UserSession.kt
android/app/src/main/java/com/focusflow/ui/: MainActivity.kt
android/app/src/main/java/com/focusflow/ui/components/: ConfirmationBanner.kt  ProfilingQuestionCard.kt  TaskCard.kt  VoiceButton.kt
android/app/src/main/java/com/focusflow/ui/screens/: AgentChatScreen.kt  AgentChatViewModel.kt  DashboardScreen.kt  HomeScreen.kt  HomeViewModel.kt  InsightsScreen.kt  TasksScreen.kt  TasksViewModel.kt
android/app/src/main/java/com/focusflow/ui/theme/: Color.kt  Theme.kt
android/app/src/main/java/com/focusflow/ui/widget/: FocusFlowWidget.kt  FocusFlowWidgetReceiver.kt  WidgetUpdateWorker.kt
android/app/src/main/java/com/focusflow/voice/: OnDeviceSpeechRecognizer.kt  VoiceRecorder.kt
android/app/src/main/res/layout/: widget_initial.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: widget_info.xml
backend/: Cargo.toml  Dockerfile
backend/ai/: Cargo.toml
backend/ai/src/: agent.rs  classifier.rs  dashboard_generator.rs  embeddings.rs  insights_generator.rs  lib.rs  types.rs  whisper.rs
backend/api/: Cargo.toml
backend/api/src/: lib.rs  main.rs
backend/api/src/middleware/: auth.rs
backend/api/src/routes/: agent.rs  auth.rs  insights.rs  mod.rs  profile.rs  signals.rs  tasks.rs  voice.rs  widget.rs
backend/api/src/ws/: handler.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/core/src/agent/: mod.rs
backend/core/src/insights/: mod.rs
backend/core/src/profiling/: mod.rs
backend/core/src/signals/: mod.rs
backend/core/src/tasks/: mod.rs
backend/db/: Cargo.toml
backend/db/src/: lib.rs  models.rs  postgres.rs  qdrant.rs  redis_cache.rs
docs/: API.md  DEPLOYMENT_GUIDE.md  FREE_HOSTING_SETUP.md
migrations/: 001_initial_schema.sql  002_seed_profiling_questions.sql  003_agent_conversations.sql
scripts/: generate_token.sh  run_migrations.sh  setup.sh  test_voice.sh
