[package]
name = "focusflow-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "focusflow-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws", "multipart"] }
axum-extra = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
multer = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }

focusflow-core = { workspace = true }
focusflow-ai = { workspace = true }
focusflow-db = { workspace = true }
