[package]
name = "focusflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

sqlx = { workspace = true }

focusflow-db = { workspace = true }
focusflow-ai = { workspace = true }
